src/nationalarchives/components/picture/picture.scss
@use "../../tools/colour";
@use "../../tools/media";
@use "../../tools/spacing";
@use "../../tools/typography";
@use "../../variables/grid";
@use "../../utilities";
@use "../button";

.tna-picture {
  @include spacing.space-above;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  padding: 0;

  &__image-wrapper {
    padding: 1.5rem;

    position: relative;
  }

  &__image {
    width: auto;
    max-height: 40rem;
    height: auto;
    margin: 0 auto;
  }

  &__toggle-transcript {
    position: absolute;
    right: 1rem;
    bottom: 1rem;
  }

  &__transcript {
    @include colour.contrast;

    padding: 1rem 1.5rem;

    .tna-template--clicked &:focus {
      outline: none;
    }

    .tna-tabs {
      margin-bottom: 0.5rem;
    }
  }

  &__caption {
    margin: 0 2rem;
    padding: 1rem;

    @include typography.relative-font-size(16);

    @include colour.colour-border("keyline", 1px, solid, bottom);
  }

  @include media.on-mobile {
    &__image-wrapper {
      padding: 0;
    }
  }

  @include media.on-tiny {
    .tna-column & {
      width: calc(100% + #{grid.$gutter-width-tiny * 2});

      position: relative;
      left: -#{grid.$gutter-width-tiny};
    }

    &__image {
      width: 100%;
      max-height: none;
      height: auto;
    }
  }

  @include colour.on-high-contrast-and-forced-colours {
    @include colour.colour-border("keyline-dark", 1px);
    border-bottom-width: 0;

    &__caption {
      padding: 1rem;
    }
  }
}

